--- a/ongoing-project.html
+++ b/ongoing-project.html
@@ -239,12 +239,12 @@
             <div id="top"></div>
 
             <section id="subheader" class="relative jarallax text-light">
-                <img src="images/background/mixed-1.webp" class="jarallax-img" alt="">
+                <img src="/img/Ongoing_Project.jpg" class="jarallax-img" alt="">
                 <div class="container relative z-index-1000">
                     <div class="row justify-content-center">
                         <div class="col-lg-6 text-center">
-                            <img src="/img/capital.png" alt="" style="width: 200px;">
-                            <p class="lead mt-3">Capitol Avenue stands as a premier investment destination in Noida Sector 62, merging modern design, strategic location, and hyper-local advantages that drive financial growth and enhance quality of life remarkably.</p>
+                          <h1>Capitol Avenu</h1>
+                            <p class="lead mt-3" style="color: #fff;">Capitol Avenue stands as a premier investment destination in Noida Sector 62, merging modern design, strategic location, and hyper-local advantages that drive financial growth and enhance quality of life remarkably.</p>
                             <ul class="crumb">
                                 <li><a href="index.html">Home</a></li>
                                 <li class="active">Ongoing Project</li>
