--- a/upcoming-project.html
+++ b/upcoming-project.html
@@ -239,7 +239,7 @@
             <div id="top"></div>
 
             <section id="subheader" class="relative jarallax text-light">
-                <img src="images/background/mixed-1.webp" class="jarallax-img" alt="">
+                <img src="img/Upcoming_Project_Banner.jpg" class="jarallax-img" alt="">
                 <div class="container relative z-index-1000">
                     <div class="row justify-content-center">
                         <div class="col-lg-6 text-center">
