upcoming outgoing images done

--- a/ongoing-project.html
+++ b/ongoing-project.html
@@ -261,7 +261,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-1 jarallax">
-                                    <img src="images/facilities/1.webp" class="jarallax-img" alt="">
+                                    <img src="img/ongoing/Strategic_Location.png" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>
@@ -285,7 +285,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-2 jarallax">
-                                    <img src="images/facilities/2.webp" class="jarallax-img" alt="">
+                                    <img src="img/ongoing/Robust_Financial_Growth.png" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>                                                
@@ -295,7 +295,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-1 jarallax">
-                                    <img src="images/facilities/3.webp" class="jarallax-img" alt="">
+                                    <img src="img/ongoing/Hyper_Local_Economic_Environment.png" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>
@@ -319,7 +319,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-2 jarallax">
-                                    <img src="images/facilities/4.webp" class="jarallax-img" alt="">
+                                    <img src="img/ongoing/Advanced_Infrastructure_Excellence.png" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>                                                
@@ -329,7 +329,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-1 jarallax">
-                                    <img src="images/facilities/5.webp" class="jarallax-img" alt="">
+                                    <img src="img/ongoing/Diverse_Tenant_Mix.png" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>
@@ -353,7 +353,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-2 jarallax">
-                                    <img src="images/facilities/6.webp" class="jarallax-img" alt="">
+                                    <img src="img/ongoing/Community_Integration.png" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>                                                
