--- a/about.html
+++ b/about.html
@@ -279,9 +279,9 @@
         </section>
 
         <section class="relative lines-deco">
-          <div class="container">
-            <div class="row gx-5 align-items-center">
-              <div class="col-lg-6">
+          <div class="container" >
+            <div class="row gx-5 align-items-center" >
+              <div class="col-lg-6 relative z-index-2" style="background-color: #fff;">
                 <div class="subtitle wow fadeInUp mb-3">Welcome</div>
                 <h2 class="wow fadeInUp" data-wow-delay=".2s">
                   Building Legacies Through Vision and Innovation
@@ -426,7 +426,7 @@
           <div class="container relative z-2">
             <div class="row g-4">
               <div class="col-lg-6">
-                <div class="ms-4">
+                <div class="ms-4" style="background-color: #fff;">
                   <div class="subtitle wow fadeInUp mb-3">What Drives Us</div>
 
                   <div class="row g-3">
@@ -564,7 +564,7 @@
                   <div class="col-md-6">
                     <div class="relative">
                       <img
-                        src="images/misc/9.webp"
+                        src="img/ABV_1.jpg"
                         class="img-fluid wow fadeInUp"
                         alt=""
                       />
@@ -575,7 +575,7 @@
                     <div class="spacer-single sm-hide"></div>
                     <div class="relative">
                       <img
-                        src="images/misc/10.webp"
+                        src="img/ABV_2.jpg"
                         class="img-fluid wow fadeInUp"
                         alt=""
                       />
