--- a/upcoming-project.html
+++ b/upcoming-project.html
@@ -261,7 +261,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-1 jarallax">
-                                    <img src="images/facilities/1.webp" class="jarallax-img" alt="">
+                                    <img src="img/upcoming/Deep_Spiritual_Connection.jpg" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>
@@ -285,7 +285,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-2 jarallax">
-                                    <img src="images/facilities/2.webp" class="jarallax-img" alt="">
+                                    <img src="img/upcoming/Lucrative_Financial_Opportunity.jpg" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>                                                
@@ -295,7 +295,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-1 jarallax">
-                                    <img src="images/facilities/3.webp" class="jarallax-img" alt="">
+                                    <img src="img/upcoming/Heritage_Meets_Innovation.jpg" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>
@@ -319,7 +319,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-2 jarallax">
-                                    <img src="images/facilities/4.webp" class="jarallax-img" alt="">
+                                    <img src="img/upcoming/Vibrant_Community .jpg" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>                                                
@@ -329,7 +329,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-1 jarallax">
-                                    <img src="images/facilities/5.webp" class="jarallax-img" alt="">
+                                    <img src="img/upcoming/Spiritual_Tourism.jpg" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>
@@ -353,7 +353,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-2 jarallax">
-                                    <img src="images/facilities/6.webp" class="jarallax-img" alt="">
+                                    <img src="img/upcoming/_Cultural_Renaissance.jpg" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>                                                
