updated text and fonts

--- a/about.html
+++ b/about.html
@@ -184,16 +184,17 @@
                     </div>
                     <div class="topbar-widget">
                       <a href="#"
-                        ><i class="icofont-envelope"></i>contact@almaris.com</a
+                        ><i class="icofont-envelope"></i>info@pincodeinfra.com</a
                       >
                     </div>
                   </div>
 
                   <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a>
-                    <a href="#"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube fa-lg"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61573418790165"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                    <a href="https://x.com/pincodeinfra"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+                    <a href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                    <a href="https://www.instagram.com/pincodeinfra"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/company/105912895/admin/dashboard/"><i class="fa-brands fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -219,36 +220,29 @@
                 <div class="de-flex-col header-col-mid">
                   <ul id="mainmenu">
                     <li>
-                      <a class="menu-item" href="/">Home</a>
-                    </li>
+                      <a class="menu-item" href="index.html">Home</a>
+                       </li>
                     <li>
                       <a class="menu-item" href="/about.html">About</a>
-                    </li>
+                      </li>
                     <li>
-                      <a class="menu-item" href="/index.html#vision">Vision</a>
+                      <a class="menu-item" href="#vision">Vision</a>
                     </li>
+                    <li class="menu-item"> <a href="/upcoming-project.html">Projects</a>
+                      <ul>
+                          <li><a href="/ongoing-project.html">Ongoing Project</a></li>
+                          <li><a href="/upcoming-project.html">Upcoming Project</a></li>
+                      </ul>
+                  </li>
+                    <li><a class="menu-item" href="#features">Features</a></li>
                     <li>
-                      <a class="menu-item" href="/index.html#projects"
-                        >Project</a
-                      >
-                    </li>
-                    <li>
-                      <a class="menu-item" href="/index.html#features"
-                        >Features</a
-                      >
-                    </li>
-                    <li>
-                      <a class="menu-item" href="/index.html#contact"
-                        >Contact</a
-                      >
+                      <a class="menu-item" href="#contact">Contact</a>
                     </li>
                   </ul>
                 </div>
                 <div class="de-flex-col">
                   <div class="menu_side_area">
-                    <button class="open-popup-btn btn-main btn-line">
-                      Enquiry
-                    </button>
+                    <button class="open-popup-btn btn-main btn-line">Enquiry</button>
                     <span id="menu-btn"></span>
                   </div>
                 </div>
@@ -367,7 +361,7 @@
                 <div
                   class="col-lg-3 col-md-6 col-sm-12 d-flex flex-column align-items-center"
                 >
-                  <img src="img/team/1.webp" class="img-fluid" alt="" />
+                  <img src="img/team/1.webp" class="img-fluid z-index-top" alt="" />
                   <div class="p-3 text-center">
                     <h4 class="mb-0">Manpreet Singh</h4>
                     <p class="mb-2">Director</p>
@@ -394,7 +388,7 @@
                 <div
                   class="col-lg-3 col-md-6 col-sm-12 d-flex flex-column align-items-center"
                 >
-                  <img src="img/team/2.webp" class="img-fluid" alt="" />
+                  <img src="img/team/2.webp" class="img-fluid z-index-top" alt="" />
                   <div class="p-3 text-center">
                     <h4 class="mb-0">Gurpreet Singh</h4>
                     <p class="mb-2">Director</p>
@@ -605,16 +599,17 @@
                 <div>
                   <img src="img/LogoWhite.png" class="w-200px" alt="" /><br />
                   <div class="social-icons mb-sm-30 mt-4">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61573418790165"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                    <a href="https://x.com/pincodeinfra"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+                    <a href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                    <a href="https://www.instagram.com/pincodeinfra"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/company/105912895/admin/dashboard/"><i class="fa-brands fa-linkedin"></i></a>
                   </div>
                 </div>
                 <div>
                   <h3 class="fs-20">Contact Us</h3>
                   T. +929 333 9296<br />
-                  M. contact@almaris.com
+                  M. info@pincodeinfra.com
                 </div>
               </div>
             </div>
