--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@
             background: #218838;
         }
 
-
     </style>
   </head>
 
@@ -179,16 +178,17 @@
                     </div>
                     <div class="topbar-widget">
                       <a href="#"
-                        ><i class="icofont-envelope"></i>contact@almaris.com</a
+                        ><i class="icofont-envelope"></i>info@pincodeinfra.com</a
                       >
                     </div>
                   </div>
 
                   <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a>
-                    <a href="#"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube fa-lg"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61573418790165"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                    <a href="https://x.com/pincodeinfra"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+                    <a href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                    <a href="https://www.instagram.com/pincodeinfra"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/company/105912895/admin/dashboard/"><i class="fa-brands fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -222,9 +222,12 @@
                     <li>
                       <a class="menu-item" href="#vision">Vision</a>
                     </li>
-                    <li>
-                      <a class="menu-item" href="#projects">Project</a>
-                     </li>
+                    <li class="menu-item"> <a href="/upcoming-project.html">Projects</a>
+                      <ul>
+                          <li><a href="/ongoing-project.html">Ongoing Project</a></li>
+                          <li><a href="/upcoming-project.html">Upcoming Project</a></li>
+                      </ul>
+                  </li>
                     <li><a class="menu-item" href="#features">Features</a></li>
                     <li>
                       <a class="menu-item" href="#contact">Contact</a>
@@ -322,7 +325,7 @@
 
         <section class="relative lines-deco">
           <div class="container">
-            <div class="row g-4">
+            <div class="row g-4 bg-white z-index-top ">
               <div class="col-lg-4 sm-hide">
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="abs top-0 w-100">
@@ -334,9 +337,9 @@
               </div>
 
               <div class="col-lg-4 text-center">
-                <div class="wow scaleIn">
+                <div class="wow scaleIn bg-white">
                   <div class="subtitle id-color mb-3">About Us</div>
-                  <p class="wow fadeInUp">
+                  <p class="wow fadeInUp bg-white">
                     PINCODE is an idea born from ambition, shaped by experience,
                     and driven by vision. We are a new-age real estate
                     development firm that believes in creating spaces that stand
@@ -346,7 +349,7 @@
                     the way people perceive commercial and lifestyle spaces.
                   </p>
 
-                  <div class="text-center wow fadeInUp" data-wow-delay=".5s">
+                  <div class="text-center wow bg-white fadeInUp" data-wow-delay=".5s">
                     <h4 class="fw-bold mb-1">
                       We focus on excellence <br />
                       not just in construction, but in thought.
@@ -385,9 +388,9 @@
             <div class="row g-4">
               <div class="col-md-6">
                 <div class="relative" style="background-color: #fff">
-                  <div class="subtitle id-color wow fadeInUp">Our</div>
-                  <h2>Mission</h2>
-                  <p class="mv-para">
+                  <!-- <div class="subtitle id-color wow fadeInUp text-center">Our</div> -->
+                  <h2 class="text-center">Mission</h2>
+                  <p class="mv-para text-center">
                     To develop intelligent, inspiring spaces that elevate lives,
                     empower businesses, and deliver enduring value. Our mission
                     is to create environments where innovation meets
@@ -402,9 +405,9 @@
 
               <div class="col-md-6">
                 <div class="relative" style="background-color: #fff">
-                  <div class="subtitle id-color wow fadeInUp">Our</div>
-                  <h2>Vision</h2>
-                  <p class="mv-para">
+                  <!-- <div class="subtitle id-color wow fadeInUp">Our</div> -->
+                  <h2 class="text-center">Vision</h2>
+                  <p class="mv-para text-center">
                     Our vision is to become India’s most trusted name in
                     landmark developments by consistently delivering exceptional
                     projects that stand as symbols of innovation, quality, and
@@ -425,7 +428,7 @@
         <section class="relative lines-deco" id="projects">
           <div class="container relative z-2">
             <div class="row g-4">
-              <div class="col-lg-8 offset-lg-2 text-center">
+              <div class="col-lg-8 offset-lg-2 text-center project-head">
                 <div class="subtitle id-color wow fadeInUp mb-3">Pincode's</div>
                 <h2 class="wow fadeInUp">Projects</h2>
               </div>
@@ -483,7 +486,7 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-8 offset-lg-2 text-center">
-                <div class="subtitle id-color wow fadeInUp mb-3">
+                <div class="subtitle id-color wow fadeInUp mb-3" style="color: #fff;">
                   Capitol Avenue
                 </div>
                 <h2 class="wow fadeInUp">Features</h2>
@@ -505,12 +508,12 @@
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 py-5 pe-lg-5">
-                  <h3>Prime Location</h3>
+                  <h3 class="text-center">Prime Location</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 2 Guests </span>
                     <span class="me-4"> 30 ft </span>
                   </div> -->
-                  <p class="pe-lg-5">
+                  <p class="pe-lg-5 text-center">
                     Situated in the heart of Noida’s thriving business district,
                     Capitol Avenue offers unrivaled accessibility to major
                     transportation hubs, corporate centers, and premium
@@ -518,7 +521,7 @@
                     supports high footfall, and positions businesses for
                     sustainable growth and success remarkably.
                   </p>
-                  <button class="btn-main mt-2 open-popup-btn">Know More</button>
+                  <button class="btn-main mt-2 open-popup-btn text-center w-full">Know More</button>
                 </div>
               </div>
             </div>
@@ -538,12 +541,12 @@
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 offset-lg-6 py-5 ps-lg-5">
-                  <h3>Modern Design</h3>
+                  <h3 class="text-center">Modern Design</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 2 Guests </span>
                     <span class="me-4"> 30 ft </span>
                   </div> -->
-                  <p class="pe-lg-5">
+                  <p class="pe-lg-5 text-center">
                     Capitol Avenue showcases a modern architectural design that
                     seamlessly blends functionality with aesthetic appeal. The
                     thoughtfully planned layout, cutting-edge infrastructure,
@@ -551,7 +554,7 @@
                     environments, setting new benchmarks for innovation and
                     contemporary elegance for lasting impact.
                   </p>
-                  <button class="btn-main mt-2 open-popup-btn">Know More</button>
+                  <button class="btn-main mt-2 open-popup-btn text-center w-full">Know More</button>
                 </div>
               </div>
             </div>
@@ -568,12 +571,12 @@
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 py-5 pe-lg-5">
-                  <h3>State-of-the-Art Amenities</h3>
+                  <h3 class="text-center">State-of-the-Art Amenities</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 2 Guests </span>
                     <span class="me-4"> 30 ft </span>
                   </div> -->
-                  <p class="pe-lg-5">
+                  <p class="pe-lg-5 text-center">
                     Offering a comprehensive range of state-of-the-art
                     amenities, Capitol Avenue ensures a superior working and
                     shopping experience. Facilities include advanced security,
@@ -581,7 +584,7 @@
                     infrastructure, all designed to promote comfort,
                     productivity, and a vibrant urban lifestyle with excellence.
                   </p>
-                  <button class="btn-main mt-2 open-popup-btn">Know More</button>
+                  <button class="btn-main mt-2 open-popup-btn text-center w-full">Know More</button>
                 </div>
               </div>
             </div>
@@ -601,12 +604,12 @@
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 offset-lg-6 py-5 ps-lg-5">
-                  <h3>Integrated Commercial Ecosystem</h3>
+                  <h3 class="text-center">Integrated Commercial Ecosystem</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 4 Guests </span>
                     <span class="me-4"> 60 ft </span>
                   </div> -->
-                  <p class="pe-lg-5">
+                  <p class="pe-lg-5 text-center">
                     Capitol Avenue establishes an integrated commercial
                     ecosystem by uniting office spaces, high-street retail
                     zones, and recreational areas. This holistic environment
@@ -614,7 +617,7 @@
                     a dynamic platform for growth, making it an iconic landmark
                     for visionary enterprises.
                   </p>
-                  <button class="btn-main mt-2 open-popup-btn">Know More</button>
+                  <button class="btn-main mt-2 open-popup-btn text-center w-full">Know More</button>
                 </div>
               </div>
             </div>
@@ -640,9 +643,10 @@
                 <form
                   name="contactForm"
                   id="contact_form"
-                  class="position-relative z1000"
+                  class="position-relative z-index-top bg-white
                   method="post"
                   action="contact.php"
+                  
                 >
                   <div
                     id="contact_form_wrap"
@@ -814,16 +818,17 @@
                 <div>
                   <img src="img/LogoWhite.png" class="w-200px" alt="" /><br />
                   <div class="social-icons mb-sm-30 mt-4">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61573418790165"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                    <a href="https://x.com/pincodeinfra"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+                    <a href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                    <a href="https://www.instagram.com/pincodeinfra"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/company/105912895/admin/dashboard/"><i class="fa-brands fa-linkedin"></i></a>
                   </div>
                 </div>
                 <div>
                   <h3 class="fs-20">Contact Us</h3>
                   T. +929 333 9296<br />
-                  M. contact@almaris.com
+                  M. info@pincodeinfra.com
                 </div>
               </div>
             </div>
