--- a/ongoing-project.html
+++ b/ongoing-project.html
@@ -169,16 +169,17 @@
                       </div>
                       <div class="topbar-widget">
                         <a href="#"
-                          ><i class="icofont-envelope"></i>contact@almaris.com</a
+                          ><i class="icofont-envelope"></i>info@pincodeinfra.com</a
                         >
                       </div>
                     </div>
   
                     <div class="social-icons">
-                      <a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a>
-                      <a href="#"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
-                      <a href="#"><i class="fa-brands fa-youtube fa-lg"></i></a>
-                      <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                      <a href="https://www.facebook.com/profile.php?id=61573418790165"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                      <a href="https://x.com/pincodeinfra"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+                      <a href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                      <a href="https://www.instagram.com/pincodeinfra"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                      <a href="https://www.linkedin.com/company/105912895/admin/dashboard/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                   </div>
                 </div>
@@ -204,20 +205,23 @@
                   <div class="de-flex-col header-col-mid">
                     <ul id="mainmenu">
                       <li>
-                        <a class="menu-item" href="/">Home</a>
+                        <a class="menu-item" href="index.html">Home</a>
                          </li>
                       <li>
                         <a class="menu-item" href="/about.html">About</a>
                         </li>
                       <li>
-                        <a class="menu-item" href="/index.html#vision">Vision</a>
+                        <a class="menu-item" href="#vision">Vision</a>
                       </li>
+                      <li class="menu-item"> <a href="/upcoming-project.html">Projects</a>
+                        <ul>
+                            <li><a href="/ongoing-project.html">Ongoing Project</a></li>
+                            <li><a href="/upcoming-project.html">Upcoming Project</a></li>
+                        </ul>
+                    </li>
+                      <li><a class="menu-item" href="#features">Features</a></li>
                       <li>
-                        <a class="menu-item" href="/index.html#projects">Project</a>
-                       </li>
-                      <li><a class="menu-item" href="/index.html#features">Features</a></li>
-                      <li>
-                        <a class="menu-item" href="/index.html#contact">Contact</a>
+                        <a class="menu-item" href="#contact">Contact</a>
                       </li>
                     </ul>
                   </div>
@@ -267,7 +271,7 @@
                         </div>
 
                         <div class="col-lg-5">
-                            <div class="ms-lg-5 wow scaleIn">
+                            <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Strategic Location & Connectivity</h2>
                                 <p>Capitol Avenue is strategically located in Noida Sector 62, offering unparalleled connectivity to major highways, metro stations, and commercial hubs, ensuring commuter access and increased property value appreciation over time.</p>
                             </div>
@@ -276,7 +280,7 @@
 
                     <div class="row g-0 align-items-center justify-content-center">
                         <div class="col-lg-5">
-                            <div class="me-lg-5 wow scaleIn">
+                            <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Robust Financial Growth</h2>
                                 <p>Investing in Capitol Avenue unlocks robust financial growth. Its strategic location and innovative design attract quality tenants, ensuring consistent rental yields and sustainable long-term capital gains in a thriving market.</p>
                             </div>
@@ -301,7 +305,7 @@
                         </div>
 
                         <div class="col-lg-5">
-                            <div class="ms-lg-5 wow scaleIn">
+                            <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Hyper-Local Economic Environment</h2>
                                 <p>Capitol Avenue benefits from a vibrant hyper-local economic environment. Proximity to established business clusters and lifestyle centers drives demand, creating a stable ecosystem that supports revenue growth and investor confidence.</p>
                             </div>
@@ -310,7 +314,7 @@
 
                     <div class="row g-0 align-items-center justify-content-center">
                         <div class="col-lg-5">
-                            <div class="me-lg-5 wow scaleIn">
+                            <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Advanced Infrastructure Excellence</h2>
                                 <p>Capitol Avenue features advanced infrastructure with design, finishes, and integrated technology systems. This development ensures operational efficiency, attracts businesses, and contributes to an environment of sustained local growth and productivity.</p>
                             </div>
@@ -335,7 +339,7 @@
                         </div>
 
                         <div class="col-lg-5">
-                            <div class="ms-lg-5 wow scaleIn">
+                            <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Diverse Tenant Mix</h2>
                                 <p>Capitol Avenue attracts a diverse tenant mix from established corporates to innovative start-ups. This diversity drives synergies and creates a local ecosystem supporting stable income streams and economic development remarkably.</p>
                             </div>
@@ -344,7 +348,7 @@
 
                     <div class="row g-0 align-items-center justify-content-center">
                         <div class="col-lg-5">
-                            <div class="me-lg-5 wow scaleIn">
+                            <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Community Integration & Lifestyle</h2>
                                 <p>Capitol Avenue is embedded within a thriving community that offers lifestyle amenities. Its proximity to schools, shopping centers, and recreational facilities enhances quality of life, fostering a balanced work-leisure environment.</p>
                             </div>
@@ -381,16 +385,17 @@
                   <div>
                     <img src="img/LogoWhite.png" class="w-200px" alt="" /><br />
                     <div class="social-icons mb-sm-30 mt-4">
-                      <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                      <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                      <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                      <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                      <a href="https://www.facebook.com/profile.php?id=61573418790165"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                      <a href="https://x.com/pincodeinfra"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+                      <a href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                      <a href="https://www.instagram.com/pincodeinfra"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                      <a href="https://www.linkedin.com/company/105912895/admin/dashboard/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                   </div>
                   <div>
                     <h3 class="fs-20">Contact Us</h3>
                     T. +929 333 9296<br />
-                    M. contact@almaris.com
+                    M. info@pincodeinfra.com
                   </div>
                 </div>
               </div>
