--- a/upcoming-project.html
+++ b/upcoming-project.html
@@ -169,16 +169,17 @@
                       </div>
                       <div class="topbar-widget">
                         <a href="#"
-                          ><i class="icofont-envelope"></i>contact@almaris.com</a
+                          ><i class="icofont-envelope"></i>info@pincodeinfra.com</a
                         >
                       </div>
                     </div>
   
                     <div class="social-icons">
-                      <a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a>
-                      <a href="#"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
-                      <a href="#"><i class="fa-brands fa-youtube fa-lg"></i></a>
-                      <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                      <a href="https://www.facebook.com/profile.php?id=61573418790165"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                      <a href="https://x.com/pincodeinfra"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+                      <a href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                      <a href="https://www.instagram.com/pincodeinfra"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                      <a href="https://www.linkedin.com/company/105912895/admin/dashboard/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                   </div>
                 </div>
@@ -204,20 +205,23 @@
                   <div class="de-flex-col header-col-mid">
                     <ul id="mainmenu">
                       <li>
-                        <a class="menu-item" href="/">Home</a>
+                        <a class="menu-item" href="index.html">Home</a>
                          </li>
                       <li>
                         <a class="menu-item" href="/about.html">About</a>
                         </li>
                       <li>
-                        <a class="menu-item" href="/index.html#vision">Vision</a>
+                        <a class="menu-item" href="#vision">Vision</a>
                       </li>
+                      <li class="menu-item"> <a href="/upcoming-project.html">Projects</a>
+                        <ul>
+                            <li><a href="/ongoing-project.html">Ongoing Project</a></li>
+                            <li><a href="/upcoming-project.html">Upcoming Project</a></li>
+                        </ul>
+                    </li>
+                      <li><a class="menu-item" href="#features">Features</a></li>
                       <li>
-                        <a class="menu-item" href="/index.html#projects">Project</a>
-                       </li>
-                      <li><a class="menu-item" href="/index.html#features">Features</a></li>
-                      <li>
-                        <a class="menu-item" href="/index.html#contact">Contact</a>
+                        <a class="menu-item" href="#contact">Contact</a>
                       </li>
                     </ul>
                   </div>
@@ -267,7 +271,7 @@
                         </div>
 
                         <div class="col-lg-5">
-                            <div class="ms-lg-5 wow scaleIn">
+                            <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Deep Spiritual Connection</h2>
                                 <p>Investing in Ayodhya fosters a profound spiritual connection, offering residents a serene environment to embrace ancient traditions, cultivate mindfulness and inner peace, while boosting personal growth and enhancing overall well-being.</p>
                             </div>
@@ -276,7 +280,7 @@
 
                     <div class="row g-0 align-items-center justify-content-center">
                         <div class="col-lg-5">
-                            <div class="me-lg-5 wow scaleIn">
+                            <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Lucrative Financial Opportunity</h2>
                                 <p>Investing in Ayodhya presents a lucrative opportunity, combining cultural richness with robust market potential. This dynamic environment drives consistent financial growth, stable returns, and long-term capital appreciation for discerning investors.</p>
                             </div>
@@ -301,7 +305,7 @@
                         </div>
 
                         <div class="col-lg-5">
-                            <div class="ms-lg-5 wow scaleIn">
+                            <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Heritage Meets Innovation</h2>
                                 <p>Investing in Ayodhya merges spiritual heritage with modern financial incentives, creating an ecosystem where tradition and innovation coexist, paving the way for sustainable prosperity and a balanced lifestyle for all.</p>
                             </div>
@@ -310,7 +314,7 @@
 
                     <div class="row g-0 align-items-center justify-content-center">
                         <div class="col-lg-5">
-                            <div class="me-lg-5 wow scaleIn">
+                            <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Vibrant Community Network</h2>
                                 <p>Investing in Ayodhya cultivates a vibrant community, connecting like-minded individuals who value both spiritual growth and financial success, fostering a network that supports ventures and nurtures cultural and economic advancement.</p>
                             </div>
@@ -335,7 +339,7 @@
                         </div>
 
                         <div class="col-lg-5">
-                            <div class="ms-lg-5 wow scaleIn">
+                            <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Boost to Spiritual Tourism</h2>
                                 <p>An investment in Ayodhya boosts spiritual tourism, driving robust economic diversification through visitor footfall and infrastructure enhancements, while reinforcing the city’s identity as a center of faith and cultural exchange.</p>
                             </div>
@@ -344,7 +348,7 @@
 
                     <div class="row g-0 align-items-center justify-content-center">
                         <div class="col-lg-5">
-                            <div class="me-lg-5 wow scaleIn">
+                            <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Cultural Renaissance Catalyst</h2>
                                 <p>An investment in Ayodhya catalyzes a cultural renaissance, driving property value appreciation and fostering heritage preservation, transforming the city into a magnet for investors and creative entrepreneurs with sustainable impact.</p>
                             </div>
@@ -381,16 +385,17 @@
                   <div>
                     <img src="img/LogoWhite.png" class="w-200px" alt="" /><br />
                     <div class="social-icons mb-sm-30 mt-4">
-                      <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                      <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                      <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                      <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                      <a href="https://www.facebook.com/profile.php?id=61573418790165"><i class="fa-brands fa-facebook fa-lg"></i></a>
+                      <a href="https://x.com/pincodeinfra"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+                      <a href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                      <a href="https://www.instagram.com/pincodeinfra"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                      <a href="https://www.linkedin.com/company/105912895/admin/dashboard/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                   </div>
                   <div>
                     <h3 class="fs-20">Contact Us</h3>
                     T. +929 333 9296<br />
-                    M. contact@almaris.com
+                    M. info@pincodeinfra.com
                   </div>
                 </div>
               </div>
