--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                       >
                     </div>
                     <div class="topbar-widget">
-                      <a href="#"><i class="icofont-phone"></i>+929 333 9296</a>
+                      <a href="#"><i class="icofont-phone"></i>7620203030</a>
                     </div>
                     <div class="topbar-widget">
                       <a href="#"
@@ -827,7 +827,7 @@
                 </div>
                 <div>
                   <h3 class="fs-20">Contact Us</h3>
-                  T. +929 333 9296<br />
+                  T. 7620203030<br />
                   M. info@pincodeinfra.com
                 </div>
               </div>
