--- a/about.html
+++ b/about.html
@@ -361,7 +361,7 @@
                 <div
                   class="col-lg-3 col-md-6 col-sm-12 d-flex flex-column align-items-center"
                 >
-                  <img src="img/team/1.webp" class="img-fluid z-index-top" alt="" />
+                  <img src="img/manpreet.jpg" class="img-fluid z-index-top" alt="" />
                   <div class="p-3 text-center">
                     <h4 class="mb-0">Manpreet Singh</h4>
                     <p class="mb-2">Director</p>
@@ -388,7 +388,7 @@
                 <div
                   class="col-lg-3 col-md-6 col-sm-12 d-flex flex-column align-items-center"
                 >
-                  <img src="img/team/2.webp" class="img-fluid z-index-top" alt="" />
+                  <img src="img/gurpreet.jpg" class="img-fluid z-index-top" alt="" />
                   <div class="p-3 text-center">
                     <h4 class="mb-0">Gurpreet Singh</h4>
                     <p class="mb-2">Director</p>
