--- a/ongoing-project.html
+++ b/ongoing-project.html
@@ -151,7 +151,7 @@
       </div>
         <!-- header begin -->
         <header class="transparent has-topbar">
-          <div id="topbar">
+          <!-- <div id="topbar">
             <div class="container">
               <div class="row">
                 <div class="col-lg-12">
@@ -186,7 +186,7 @@
               </div>
               <div class="clearfix"></div>
             </div>
-          </div>
+          </div> -->
           <div class="container">
             <div class="row">
               <div class="col-md-12">
@@ -206,19 +206,24 @@
                     <ul id="mainmenu">
                       <li>
                         <a class="menu-item" href="index.html">Home</a>
-                         </li>
+                      </li>
                       <li>
                         <a class="menu-item" href="/about.html">About</a>
-                        </li>
+                      </li>
                       <li>
                         <a class="menu-item" href="#vision">Vision</a>
                       </li>
-                      <li class="menu-item"> <a href="/upcoming-project.html">Projects</a>
+                      <li class="menu-item">
+                        <a href="/upcoming-project.html">Projects</a>
                         <ul>
-                            <li><a href="/ongoing-project.html">Ongoing Project</a></li>
-                            <li><a href="/upcoming-project.html">Upcoming Project</a></li>
+                          <li>
+                            <a href="/ongoing-project.html">Ongoing Project</a>
+                          </li>
+                          <li>
+                            <a href="/upcoming-project.html">Upcoming Project</a>
+                          </li>
                         </ul>
-                    </li>
+                      </li>
                       <li><a class="menu-item" href="#features">Features</a></li>
                       <li>
                         <a class="menu-item" href="#contact">Contact</a>
@@ -227,7 +232,9 @@
                   </div>
                   <div class="de-flex-col">
                     <div class="menu_side_area">
-                      <button class="open-popup-btn btn-main btn-line">Enquiry</button>
+                      <button class="open-popup-btn btn-main btn-line">
+                        Enquiry
+                      </button>
                       <span id="menu-btn"></span>
                     </div>
                   </div>
@@ -377,25 +384,51 @@
                 <div
                   class="d-lg-flex align-items-center justify-content-between text-center"
                 >
+                <div>
+                  <img src="img/LogoWhite.png" class="w-250px" alt="" /><br />
+                  <div class="social-icons mb-sm-30 mt-4">
+                    <a
+                      href="https://www.facebook.com/profile.php?id=61573418790165"
+                      ><i class="fa-brands fa-facebook fa-lg"></i
+                    ></a>
+                    <a href="https://x.com/pincodeinfra"
+                      ><i class="fa-brands fa-x-twitter fa-lg"></i
+                    ></a>
+                    <a
+                      href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"
+                      ><i class="fa-brands fa-youtube fa-lg"></i
+                    ></a>
+                    <a href="https://www.instagram.com/pincodeinfra"
+                      ><i class="fa-brands fa-instagram fa-lg"></i
+                    ></a>
+                    <a
+                      href="https://www.linkedin.com/company/105912895/admin/dashboard/"
+                      ><i class="fa-brands fa-linkedin"></i
+                    ></a>
+                  </div>
+                </div>
                   <div>
-                    <h3 class="fs-20">Address</h3>
-                    A 37, Block A, Industrial Area, Sector 62 <br />
-                    Noida, Uttar Pradesh 20130
+                    <h3 class="ml-4">Navigation</h3>
+                    <ul style="display: flex; flex-direction: column; justify-content: center; padding-left: 0;">
+                      <a href="">Home</a>
+                      <a href="">About</a>
+                      <a href="">Upcoming Project</a>
+                      <a href="">Ongoing Project</a>
+                      <a href="">Vision</a>
+                      <a href="">Contact</a>
+                    </ul>
                   </div>
                   <div>
-                    <img src="img/LogoWhite.png" class="w-200px" alt="" /><br />
-                    <div class="social-icons mb-sm-30 mt-4">
-                      <a href="https://www.facebook.com/profile.php?id=61573418790165"><i class="fa-brands fa-facebook fa-lg"></i></a>
-                      <a href="https://x.com/pincodeinfra"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
-                      <a href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"><i class="fa-brands fa-youtube fa-lg"></i></a>
-                      <a href="https://www.instagram.com/pincodeinfra"><i class="fa-brands fa-instagram fa-lg"></i></a>
-                      <a href="https://www.linkedin.com/company/105912895/admin/dashboard/"><i class="fa-brands fa-linkedin"></i></a>
+                    <div>
+                      <h3>Address</h3>
+                      A 37, Block A, Industrial Area, Sector 62 <br />
+                      Noida, Uttar Pradesh 20130
                     </div>
-                  </div>
-                  <div>
-                    <h3 class="fs-20">Contact Us</h3>
-                    T. 7620203030<br />
-                    M. info@pincodeinfra.com
+                    <h3 class="mt-4">Contact Info</h3>
+                    <div style="display: flex; flex-direction: column; ">
+                      <small><i class="fa-solid fa-envelope"></i> info@pincodeinfra.com</small>
+                      <small><i class="fa-solid fa-phone"></i> 7620203030</small>
+                    </div>
                   </div>
                 </div>
               </div>
