upcoming project changes the content

--- a/upcoming-project.html
+++ b/upcoming-project.html
@@ -295,7 +295,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-1 jarallax">
                     <img
-                      src="img/upcoming/Deep_Spiritual_Connection.jpg"
+                      src="img/Infrastructure.jpg"
                       class="jarallax-img"
                       alt=""
                     />
@@ -419,7 +419,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-2 jarallax">
                     <img
-                      src="img/Infrastructure.jpg"
+                      src="img/Demand_Surges.jpg"
                       class="jarallax-img"
                       alt=""
                     />
